--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -127,6 +127,8 @@ DEBUGGING / TESTS / UX / QA / OTHER
 ===> May come in handy for writing PHP unit tests (in /app-lib/php/inline/debugging/):
 ===> https://stackoverflow.com/questions/861254/iterate-over-properties-of-a-php-class
 !!!!
+===> JS / CSS map file loading will timeout, if you load too many charts / news feeds.
+!!!!
 ===> Think over what other "FAQ page / TROUBLESHOOTING.txt" entries would be helpful.
 !!!!
 ===> Try to do tests / UX / QA / debugging before adding new infrastructure
