--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -119,6 +119,7 @@ DEBUGGING / TESTS / UX / QA / OTHER
 !!!!                                                                                    
 ===> WHEN DEBUGGING / TESTING, LEAVE "$dev_debug_php_errors" IN "app-lib/php/init.php" SET 
 ===> LIKE SO, TO ALWAYS LOG ALL PARSE / FATAL PHP ERRORS DURING TESTING: (E_ERROR | E_PARSE)
+===> 'Desktop Editions' log PHP errors to: /INSTALL_CRYPTO_TRACKER_HERE/php_errors.log
 !!!!
 ===> config.php (and plug-conf.php for plugins) MUST ONLY CONTAIN STATIC CONFIGS,
 ===> as all configs are saved to / run from cache file: /cache/secured/ct_conf_XXXXXXXXX.dat
@@ -149,13 +150,7 @@ DEBUGGING / TESTS / UX / QA / OTHER
 ############ NEXT DEBUG / TEST / QA / OTHER SCHEDULED WORK SESSION ###################################
 
 
-Final testing / release v6.00.17
-
-
-######################################################################################################
-
-
-Try getting the desktop edition logs (including PHP errors) into a /logs/ directory in the main folder.
+Update Portfolio page screenshots, since we added the 'Rank' column AND REBRANDED app name.
 
 
 Make sure everything STILL runs smoothly with the charts page turned off.
@@ -164,16 +159,19 @@ Make sure everything STILL runs smoothly with the charts page turned off.
 Test turning password protection on/off on the interface (NOT admin area), I messed with it BUT changed it back.
 
 
+Change "portfolio cache size gigabytes" system chart telemetry name to "app cache size gigabytes".
+
+
 Remove all linebreaks in javascript alert / confirm dialogue boxes, except for new paragraphs. Let the browser choose the max width on it's own (like they do nowadays)
 
 
-LOCAL JAVASCRIPT STORAGE keeps deleting content in my trade notes textarea, find out why
+######################################################################################################
 
 
 Build fail-safes directly into the plugin CONFIG INIT for default ui_name and ui_location, as well as error log AND skip including any activated plugin with runtime_mode not set / not properly set.
 
 
-Update Portfolio page screenshots, since we added the 'Rank' column AND REBRANDED app name.
+LOCAL JAVASCRIPT STORAGE keeps deleting content in my trade notes textarea, find out why
 
 
 Add more checks / auto-corrects to config-auto-adjust.php (we've added alot more config settings since it's creation)
@@ -247,16 +245,16 @@ Add more Jupiter agg markets to Solana coins in demo config, and in price target
 Add openserum markets support.
 
 
+Research whether POST data size affects header size like cookie data size does.
+
+
 ######################################################################################################################
-
-
-Look into Aptos support for the 'address-balance-tracker' plugin (see the API notes section for public endpoints REST API docs).
 
 
 Change the 'eth_erc20_icos' => 'ico_erc20_value' config settings to 'token_presales' => 'presale_value', AND support any base pair as the pairing (NOT just 'ETH').
 
 
-Research whether POST data size affects header size like cookie data size does.
+Look into Aptos support for the 'address-balance-tracker' plugin (see the API notes section for public endpoints REST API docs).
 
 
 Add additional ability to do telegram / discord webhooks in the new "crypto-info-bot" plugin, to query asset prices at different exchanges through telegram chat with the chat bot. Example: "/price btc-usd-coinbase"
