--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -262,6 +262,11 @@ FEATURES / NEW INFRASTRUCTURE / RESEARCH
 ############ NEXT FEATURES / NEW INFRASTRUCTURE / RESEARCH SCHEDULED WORK SESSION ####################################
 
 
+MIGRATION TO BOOTSTRAP V5:
+
+https://getbootstrap.com/docs/5.0/migration/
+
+
 SEE PUBLIC DEMO FOR GUIDANCE ON MIGRATING A FEW ITEMS BELOW (AS WE ARE NOT UPDATING THE PUBLIC DEMO UNTIL WE COMPLETE THE TEMPLATE OVERHAUL)!
 
 
